Removed unnecessary css fix for modal flicker.
Already solved in 469b109, but it must have reentered as merge debris.

--- a/app/assets/stylesheets/adl/work.scss
+++ b/app/assets/stylesheets/adl/work.scss
@@ -62,16 +62,9 @@
   }
 }
 
-<<<<<<< HEAD
-body.modal-open .workNavbarFixContainer, body.modal-open .workHeaderFixContainer, body.modal-open #header-navbar{
-  right: 15px!important;
-}
 .text-content{
   padding-left:$grid-gutter-width;
   padding-right:$grid-gutter-width;
 }
-
-=======
->>>>>>> origin/frontend
 
 
